fixed getNumericValueFromStringarray in RangeOfValues